@@ -12,4 +12,4 @@ foo(123);
 --EXPECTF--
 3
 
-Fatal error: Argument 1 must be an array in %sarray_type_hint_001.php on line 2
+Fatal error: Argument 1 must be an array, called in %sarray_type_hint_001.php on line 7 and defined in %sarray_type_hint_001.php on line 2
